--- a/todo
+++ b/todo
@@ -1,12 +1,15 @@
 high prio:
     (magic commands: see overleaf, not practical, use metadata.tags for language-agnostic tagging and md-cells for "linking" to subplots)
+    keep cells with the same tags together - refactor to use classes instead of ids since tags are not unique anymore
 
 low prio:
-    fix tag not updating in cell-toolbar
     if new cell is inserted below/above inside the pinned area, add the same metadata.tag as the cell below/above
+    update README.mb and sideline.yml
+    if no subplot with the tag a link-cell is referencing exists, dont insert buttons on the linking cell (and show an error in the link-cell?)
 
 decide:
     run subplots when linking cells are run? (e.g. with Jupyter.notebook.execute_cells(indices))
     once(?) , when a cell with "go to..." is visible for a set time, scroll to its subplot
     move end_space and change where cells are inserted
     maybe atuomatically change scroll cell tag if subplot tag is changed?
+    if tag is removed, also unpin cell?
