--- a/todo
+++ b/todo
@@ -1,12 +1,12 @@
 high prio:
     (magic commands: see overleaf, not practical, use metadata.tags for language-agnostic tagging and md-cells for "linking" to subplots)
-    wrap each subplot in sl-container? to keep execution order
 
 low prio:
     unpinning: scroll to cell that was unpinned
     update README.mb, icon.png and sideline.yml
-    if no subplot with the tag a link-cell is referencing exists, dont insert buttons on the linking cell (and show an error in the link-cell?)
+    if no subplot with the tag a link-cell is referencing exists, dont insert buttons on the linking cell (decide: show an error in the link-cell?)
     bugfix: paste-and-replace not adding tags
+    integrate options from sideline.yml to actually do something
 
 low low prio:
     if tag is removed, also automatically unpin cell?
