--- a/demo/Open Me!.ipynb
+++ b/demo/Open Me!.ipynb
@@ -19,10 +19,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "important_var: this is my starting value\n"
+     ]
+    }
+   ],
+   "source": [
+    "#execution order demonstration\n",
+    "important_var = \"this is my starting value\"\n",
+    "print(\"important_var: \" + important_var)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Following are some tasks you can solve that demonstrate the use cases of subplots:"
+    "sideline - link to subplot 2\n",
+    "\n",
+    "Aside from the first line, reference cells (like this one) can be edited to improve readability of you work. You could describe what a certain subplot contains, for example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "important_var: my value was changed when subplot 2 was executed immediately after the referencing cell!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"important_var: \" + important_var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sideline - link to subplot 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following are some tasks you can solve that demonstrate the use cases of subplots hands-on:"
    ]
   },
   {
@@ -57,10 +111,61 @@
     "  \n",
     "If you are done with this introductory subplot, you can collapse it using the toggle button next to referencing cell on the left. Or, you can collapse (\"hide\") all subplots and show a \"normal\" notebook layout with the 👁️ button this extension added in the toolbar above."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "subplot-2"
+    ]
+   },
+   "source": [
+    "#### subplot 2\n",
+    "A subplot can be composed of one or more cells."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": [
+     "subplot-2"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#like this one!\n",
+    "important_var = \"my value was changed when subplot 2 was executed immediately after the referencing cell!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": [
+     "subplot-4"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#try selecting me and press the \"unpin\" button in the toolbar above!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": [
+     "subplot-4"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#all cells in this subplot will be inserted at the location of the reference cell"
+   ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -76,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
