--- a/demo/Open Me!.ipynb
+++ b/demo/Open Me!.ipynb
@@ -81,10 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#currently under construction"
+   ]
   },
   {
    "cell_type": "markdown",
